correção do bug no timer

--- a/pages/phase_05.html
+++ b/pages/phase_05.html
@@ -6,16 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Fase V - Cinemática</title>
     <link rel="stylesheet" href="../src/css/phase_05.css" />
-
-    <head>
-      <meta charset="UTF-8" />
-      <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-      <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-      <title>Fase V - Cinemática</title>
-      <link rel="stylesheet" href="../src/css/phase_05_post_test.css" />
-      <link rel="stylesheet" href="../src/css/bootstrap.css" />
-      <script src="https://unpkg.com/@phosphor-icons/web"></script>
-    </head>
+    <link rel="stylesheet" href="../src/css/bootstrap.css">
+    <script src="https://unpkg.com/@phosphor-icons/web"></script>
 
     <body class="bg-dark">
       <section id="initial-screen" class="d-block vw-100 position-absolute">
