correção de bugs nas fases principais

--- a/pages/phase_main_01.html
+++ b/pages/phase_main_01.html
@@ -20,7 +20,7 @@
 
         <button
           data-start-game-mobile
-          class="btn btn-primary btn-sm d-sm-inline-block d-lg-none"
+          class="btn btn-primary btn-sm d-sm-inline d-lg-none"
         >
           Começar jogo
         </button>
@@ -523,7 +523,7 @@
               <div class="modal-footer">
                 <a
                   href="./phase_main_02.html"
-                  class="btn btn-primary btn-sm d-none"
+                  class="btn btn-primary btn-sm d-lg-none"
                   role="button"
                 >
                   Próxima fase
@@ -560,7 +560,7 @@
               <div class="modal-footer">
                 <a
                   href="./phase_main_02.html"
-                  class="btn btn-primary d-none"
+                  class="btn btn-primary d-sm-none d-lg-inline"
                   role="button"
                 >
                   Próxima fase
