--- a/pages/phase_main_02.html
+++ b/pages/phase_main_02.html
@@ -520,7 +520,7 @@
               <div class="modal-footer">
                 <a
                   href="./phase_05.html"
-                  class="btn btn-primary btn-sm d-none"
+                  class="btn btn-primary btn-sm d-lg-none"
                   role="button"
                 >
                   Próxima fase
@@ -557,7 +557,7 @@
               <div class="modal-footer">
                 <a
                   href="./phase_05.html"
-                  class="btn btn-primary d-none"
+                  class="btn btn-primary d-sm-none d-lg-inline"
                   role="button"
                 >
                   Próxima fase
