aproximação das duas primeiras questoes

--- a/pages/phase_04.html
+++ b/pages/phase_04.html
@@ -75,20 +75,13 @@
           <div class="modal-content">
             <div class="modal-header">
               <h5 class="modal-title">
-                Sua tarefa é descobrir a velocidade
-                <strong>Nescessária</strong> do tatu para que ele fuja do predador!
+                A velocidade
+                <strong>Nescessária</strong> do tatu para que ele fuja do predador é de, aproximadamente:
                 <br />
               </h5>
             </div>
 
             <div class="modal-body">
-              <p class="texte-center text-black">
-                <strong>Dados</strong>: A distância entre eles é de <span class="dist-between-fox-armadillo"></span>m.
-                A distância entre o tatu e sua toca é de <span class="start-position-text"></span>. Considere a
-                velocidade da raposa
-                como sendo <span class="fox-velocity-text"></span>m/s e o tempo de encontro dela com o tatu é de <span
-                  class="crash-time-text"></span>s.
-              </p>
 
               <div class="d-flex flex-row justify-content-center align-items-center gap-3">
                 <div class="form-check">
@@ -111,6 +104,14 @@
                   <label class="text-black" for="radio4"></label>
                 </div>
               </div>
+              <br>
+              <p class="texte-center text-black">
+                <strong>Dados</strong>: A distância entre eles é de <span class="dist-between-fox-armadillo"></span>m.
+                A distância entre o tatu e sua toca é de <span class="start-position-text"></span>. Considere a
+                velocidade da raposa
+                como sendo <span class="fox-velocity-text"></span>m/s e o tempo de encontro dela com o tatu é de <span
+                  class="crash-time-text"></span>s.
+              </p>
             </div>
 
             <div class="modal-footer">
