--- a/pages/phase_06.html
+++ b/pages/phase_06.html
@@ -93,34 +93,34 @@
         <!-- MRU -->
         <div data-armadillo class="object position-absolute">
           <div id="armadillo" class="armadillo">
-            <p data-time-text class="text-center mb-0 fw-bold">
+            <p class="text-center mb-0 fw-bold">
               <span data-time-text>t = 0s</span> <br />
-              v = 10m/s
+              <span data-armadillo-position>s = 0m</span>
             </p>
           </div>
         </div>
 
         <div class="object position-absolute">
           <div class="armadillo">
-            <p class="text-center mb-0 fw-bold">t = 0s <br />v = 10m/s</p>
+            <p class="text-center mb-0 fw-bold">t = 0s <br />s = 0m</p>
           </div>
         </div>
 
         <div class="object position-absolute d-none">
           <div class="armadillo">
-            <p class="text-center mb-0 fw-bold">t = 1s <br />v = 10m/s</p>
+            <p class="text-center mb-0 fw-bold">t = 1s <br />s = 10m</p>
           </div>
         </div>
 
         <div class="object position-absolute d-none">
           <div class="armadillo">
-            <p class="text-center mb-0 fw-bold">t = 2s <br />v = 10m/s</p>
+            <p class="text-center mb-0 fw-bold">t = 2s <br />s = 20m</p>
           </div>
         </div>
 
         <div class="object position-absolute d-none">
           <div class="armadillo">
-            <p class="text-center mb-0 fw-bold">t = 3s <br />v = 10m/s</p>
+            <p class="text-center mb-0 fw-bold">t = 3s <br />s = 30m</p>
           </div>
         </div>
 
