--- a/pages/phase_01.html
+++ b/pages/phase_01.html
@@ -5,7 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Fase I - Cinemática</title>
-    <link rel="stylesheet" href="../src/css/phase_01.css" />
+    <link rel="stylesheet" href="../src/css/global.css" />
+    <link rel="stylesheet" href="../src/css/mruv_phase.css" />
     <link rel="stylesheet" href="../src/css/bootstrap.css" />
     <script src="https://unpkg.com/@phosphor-icons/web"></script>
   </head>
@@ -93,7 +94,7 @@
 
         <!-- MRU -->
         <div data-armadilloMRU class="object position-absolute">
-          <div id="armadilloMRU" class="armadilloMRU">
+          <div id="armadillo" class="armadillo">
             <p class="text-center mb-0 fw-bold">
               <span data-time-textMRU>t = 0s</span> <br />
               v = 10m/s
@@ -102,32 +103,32 @@
         </div>
 
         <div class="object position-absolute">
-          <div class="armadilloMRU">
+          <div class="armadillo">
             <p class="text-center mb-0 fw-bold">t = 0s <br />v = 10m/s</p>
           </div>
         </div>
 
         <div class="object position-absolute d-none">
-          <div class="armadilloMRU">
+          <div class="armadillo">
             <p class="text-center mb-0 fw-bold">t = 0s <br />v = 10m/s</p>
           </div>
         </div>
 
         <div class="object position-absolute d-none">
-          <div class="armadilloMRU">
+          <div class="armadillo">
             <p class="text-center mb-0 fw-bold">t = 0s <br />v = 10m/s</p>
           </div>
         </div>
 
         <div class="object position-absolute d-none">
-          <div class="armadilloMRU">
+          <div class="armadillo">
             <p class="text-center mb-0 fw-bold">t = 0s <br />v = 10m/s</p>
           </div>
         </div>
 
         <!-- MRUV -->
-        <div data-armadilloMRUV class="object-2 position-absolute">
-          <div id="armadilloMRUV" class="armadilloMRUV">
+        <div data-armadilloMRUV class="object-2 position-absolute is-bottom">
+          <div id="armadilloMRUV" class="armadilloMRUV is-bottom">
             <p data-time-textMRUV class="text-center mb-0 fw-bold">
               <span data-time-textMRUV>t = 0s</span> <br />
               v = 10m/s
@@ -135,19 +136,19 @@
           </div>
         </div>
 
-        <div class="object-2 position-absolute">
+        <div class="object-2 position-absolute is-bottom">
           <div class="armadilloMRUV">
             <p class="text-center mb-0 fw-bold">t = 0s <br />v = 10m/s</p>
           </div>
         </div>
 
-        <div class="object-2 position-absolute d-none">
+        <div class="object-2 position-absolute d-none is-bottom">
           <div class="armadilloMRUV">
             <p class="text-center mb-0 fw-bold">t = 1s <br />v = 10m/s</p>
           </div>
         </div>
 
-        <div class="object-2 position-absolute d-none">
+        <div class="object-2 position-absolute d-none is-bottom">
           <div class="armadilloMRUV">
             <p class="text-center mb-0 fw-bold">t = 2s <br />v = 10m/s</p>
           </div>
