--- a/pages/phase_03.html
+++ b/pages/phase_03.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Fase III - Cinemática</title>
-    <link rel="stylesheet" href="../src/css/phase_03.css" />
+    <link rel="stylesheet" href="../src/css/global.css" />
     <link rel="stylesheet" href="../src/css/bootstrap.css" />
     <script src="https://unpkg.com/@phosphor-icons/web"></script>
   </head>
