--- a/pages/phase_main_02.html
+++ b/pages/phase_main_02.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Fase IV -- II - Cinemática</title>
+    <link rel="stylesheet" href="../src/css/global.css">
     <link rel="stylesheet" href="../src/css/phase_main.css" />
     <link rel="stylesheet" href="../src/css/bootstrap.css" />
     <script src="https://unpkg.com/@phosphor-icons/web"></script>
