Correção na pergunta-html

--- a/pages/phase_04.html
+++ b/pages/phase_04.html
@@ -75,8 +75,8 @@
           <div class="modal-content">
             <div class="modal-header">
               <h5 class="modal-title">
-                A velocidade
-                <strong>Nescessária</strong> do tatu para que ele fuja do predador é de, aproximadamente:
+                A velocidade mínima
+                <strong>nescessária</strong> do tatu para que ele fuja do predador é de, aproximadamente:
                 <br />
               </h5>
             </div>
