--- a/pages/phase_main_01.html
+++ b/pages/phase_main_01.html
@@ -109,10 +109,11 @@
               <br />
 
               <p class="texte-center text-black">
-                <strong>Dados</strong>: A distância entre eles é de 200m. A
-                distância entre o tatu e sua toca é de 180m. Considere a
-                velocidade da raposa como sendo 20m/s e o tempo de encontro
-                dela com o tatu é de 45s.
+                <strong>Dados</strong>: A distância entre eles é de <span class="dist-between-fox-armadillo"></span>.
+                A distância entre o tatu e sua toca é de <span class="start-position-text"></span>. Considere a
+                velocidade da raposa
+                como sendo <span class="fox-velocity-text"></span>m/s e o tempo de encontro dela com o tatu é de <span
+                  class="crash-time-text"></span>s.
               </p>
             </div>
 
@@ -137,7 +138,7 @@
             <div class="modal-header">
               <h5 class="modal-title">
                 A velocidade
-                <strong>mínima nescessária</strong> do tatu para que ele fuja do
+                <strong>mínimanescessária</strong> do tatu para que ele fuja do
                 predador é de, aproximadamente:
                 <br />
               </h5>
@@ -169,10 +170,11 @@
               <br />
 
               <p class="texte-center text-black">
-                <strong>Dados</strong>: A distância entre eles é de 200m. A
-                distância entre o tatu e sua toca é de 180m. Considere a
-                velocidade da raposa como sendo 20m/s e o tempo de encontro
-                dela com o tatu é de 45s.
+                <strong>Dados</strong>: A distância entre eles é de <span class="dist-between-fox-armadillo"></span>m.
+                A distância entre o tatu e sua toca é de <span class="start-position-text"></span>. Considere a
+                velocidade da raposa
+                como sendo <span class="fox-velocity-text"></span>m/s e o tempo de encontro dela com o tatu é de <span
+                  class="crash-time-text"></span>s.
               </p>
             </div>
 
