coreção dos seletores das variaveis de texto da pergunat

--- a/pages/phase_main_01.html
+++ b/pages/phase_main_01.html
@@ -109,11 +109,11 @@
               <br />
 
               <p class="texte-center text-black">
-                <strong>Dados</strong>: A distância entre eles é de <span class="dist-between-fox-armadillo"></span>.
-                A distância entre o tatu e sua toca é de <span class="start-position-text"></span>. Considere a
+                <strong>Dados</strong>: A distância entre eles é de <span class="dist-between"></span>.
+                A distância entre o tatu e sua toca é de <span class="position-until"></span>. Considere a
                 velocidade da raposa
-                como sendo <span class="fox-velocity-text"></span>m/s e o tempo de encontro dela com o tatu é de <span
-                  class="crash-time-text"></span>s.
+                como sendo <span class="fox-velocity"></span>m/s e o tempo de encontro dela com o tatu é de <span
+                  class="crash-time"></span>s.
               </p>
             </div>
 
