--- a/pages/phase_main_01.html
+++ b/pages/phase_main_01.html
@@ -109,11 +109,11 @@
               <br />
 
               <p class="texte-center text-black">
-                <strong>Dados</strong>: A distância entre eles é de <span class="dist-between"></span>.
-                A distância entre o tatu e sua toca é de <span class="position-until-end"></span>. Considere a
+                <strong>Dados</strong>: A distância entre eles é de <span class="dist-between-desktop"></span>.
+                A distância entre o tatu e sua toca é de <span class="position-until-end-desktop"></span>. Considere a
                 velocidade da raposa
-                como sendo <span class="fox-velocity"></span>m/s e o tempo de encontro dela com o tatu é de <span
-                  class="crash-time"></span>.
+                como sendo <span class="fox-velocity-desktop"></span>m/s e o tempo de encontro dela com o tatu é de
+                <span class="crash-time-desktop"></span>.
               </p>
             </div>
 
@@ -165,15 +165,13 @@
                   <label class="text-black" for="radio4">30m/s</label>
                 </div>
               </div>
-
               <br />
-
               <p class="texte-center text-black">
-                <strong>Dados</strong>: A distância entre eles é de <span class="dist-between"></span>.
-                A distância entre o tatu e sua toca é de <span class="position-until-end"></span>. Considere a
+                <strong>Dados</strong>: A distância entre eles é de <span class="dist-between-mobile"></span>.
+                A distância entre o tatu e sua toca é de <span class="position-until-end-mobile"></span>. Considere a
                 velocidade da raposa
-                como sendo <span class="fox-velocity"></span>m/s e o tempo de encontro dela com o tatu é de <span
-                  class="crash-time"></span>.
+                como sendo <span class="fox-velocity-mobile"></span>m/s e o tempo de encontro dela com o tatu é de <span
+                  class="crash-time-mobile"></span>.
               </p>
             </div>
 
@@ -204,6 +202,9 @@
                 Parabéns por completar o desafio! Siga para a próxima fase
               </p>
             </div>
+            <div class="modal-footer">
+              <button data-next-phase-mobile class="btn btn-success">Proxímo desafio</button>
+            </div>
           </div>
         </div>
       </div>
@@ -218,8 +219,11 @@
             </div>
             <div class="modal-body">
               <p class="textWin">
-                Parabéns por completar o desafio! Siga para a próxima fase
+                Parabéns por completar o desafio! Siga para o próximo
               </p>
+            </div>
+            <div class="modal-footer">
+              <button data-next-phase-desktop class="btn btn-success">Proxímo desafio</button>
             </div>
           </div>
         </div>
