--- a/pages/phase_main_01.html
+++ b/pages/phase_main_01.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Fase IV -- I - Cinemática</title>
+  <title>Fase IV - Cinemática</title>
   <link rel="stylesheet" href="../src/css/global.css">
   <link rel="stylesheet" href="../src/css/phase_main.css" />
   <link rel="stylesheet" href="../src/css/bootstrap.css" />
@@ -224,6 +224,60 @@
             </div>
             <div class="modal-footer">
               <button data-next-phase-desktop class="btn btn-success">Proxímo desafio</button>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <!-- Modal para o próximo desafio (mobile) -->
+      <div id="next-challenge-modal-mobile" class="modal fade" data-bs-backdrop="static" data-bs-keyboard="false"
+        tabindex="-1" role="dialog" aria-labelledby="modalLabel" aria-hidden="true">
+        <div class="modal-dialog" role="document">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h5 class="modal-title" id="modalLabel">Fim do desafio</h5>
+            </div>
+            <div class="modal-body">
+              <p class="textWin">
+                Parabéns, você ganhou! Siga para o próximo desafio.
+              </p>
+            </div>
+            <div class="modal-footer">
+              <button data-next-challenge type="button" class="btn btn-success" data-bs-toggle="modal"
+                data-bs-target="#next-challenge-modal-desktop">
+                Próximo desafio
+              </button>
+
+              <a data-next-phase href="./phase_05.html" class="btn btn-primary d-none" role="button">
+                Próxima fase
+              </a>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <!-- Modal para o próximo desafio (desktop) -->
+      <div id="next-challenge-modal-desktop" class="modal fade" data-bs-backdrop="static" data-bs-keyboard="false"
+        tabindex="-1" role="dialog" aria-labelledby="modalLabel" aria-hidden="true">
+        <div class="modal-dialog" role="document">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h5 class="modal-title" id="modalLabel">Fim do desafio</h5>
+            </div>
+            <div class="modal-body">
+              <p class="textWin">
+                Parabéns, você ganhou! Siga para o próximo desafio.
+              </p>
+            </div>
+            <div class="modal-footer">
+              <button data-next-challenge type="button" class="btn btn-success" data-bs-toggle="modal"
+                data-bs-target="#next-challenge-modal-desktop">
+                Próximo desafio
+              </button>
+
+              <a data-next-phase href="./phase_05.html" class="btn btn-primary d-none" role="button">
+                Próxima fase
+              </a>
             </div>
           </div>
         </div>
