importando as opções da fase quatro

--- a/pages/phase_03.html
+++ b/pages/phase_03.html
@@ -288,7 +288,7 @@
                 </p>
 
                 <a
-                  href="./phase_main_01.html"
+                  href="./phase_04.html"
                   role="button"
                   class="btn btn-primary btn-sm"
                   >Próxima fase</a
@@ -319,10 +319,7 @@
                   Parabéns por completar o desafio! Siga para a próxima fase
                 </p>
 
-                <a
-                  href="./phase_main_01.html"
-                  role="button"
-                  class="btn btn-primary"
+                <a href="./phase_04.html" role="button" class="btn btn-primary"
                   >Próxima fase</a
                 >
               </div>
@@ -353,7 +350,7 @@
               </div>
               <div class="modal-footer">
                 <a
-                  href="./phase_main_01.html"
+                  href="./phase_04.html"
                   role="button"
                   class="btn btn-secondary btn-sm"
                 >
@@ -387,7 +384,7 @@
               </div>
               <div class="modal-footer">
                 <a
-                  href="./phase_main_01.html"
+                  href="./phase_04.html"
                   role="button"
                   class="btn btn-secondary"
                 >
@@ -425,7 +422,7 @@
               </div>
               <div class="modal-footer">
                 <a
-                  href="./phase_main_01.html"
+                  href="./phase_04.html"
                   role="button"
                   class="btn btn-danger btn-sm"
                 >
@@ -464,7 +461,7 @@
               </div>
               <div class="modal-footer">
                 <a
-                  href="./phase_main_01.html"
+                  href="./phase_04.html"
                   role="button"
                   class="btn btn-danger btn-sm"
                 >
