--- a/pages/phase_main_01.html
+++ b/pages/phase_main_01.html
@@ -289,11 +289,11 @@
               <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Fechar"></button>
             </div>
             <div class="modal-body">
-              <p class="textWin">Não foi dessa vez! Tente Novamente.</p>
+              <p class="textWin">Ops, Tito foi capturado!</p>
             </div>
             <div class="modal-footer">
               <button data-reset-mobile class="btn btn-danger btn-sm" data-bs-dismiss="modal">
-                Fechar
+                Voltar no tempo
                 <i class="bi bi-pause"></i>
               </button>
             </div>
@@ -312,12 +312,12 @@
             </div>
 
             <div class="modal-body">
-              <p class="textWin">Não foi dessa vez! Tente Novamente.</p>
+              <p class="textWin">Ops, Tito foi capturado!</p>
             </div>
 
             <div class="modal-footer">
               <button data-reset-desktop class="btn btn-danger" data-bs-dismiss="modal">
-                Fechar
+                Voltar no tempo
                 <i class="bi bi-pause"></i>
               </button>
             </div>
