--- a/pages/phase_04.html
+++ b/pages/phase_04.html
@@ -172,10 +172,9 @@
 
                 <p class="texte-center text-black">
                   <strong>Dados</strong>: A distância entre eles é de
-                  <span class="dist-between-desktop"></span>. A distância entre
-                  o tatu e sua toca é de
-                  <span class="position-until-end-desktop"></span>. Considere a
-                  velocidade da raposa como sendo
+                  <span class="dist-between"></span>. A distância entre o tatu e
+                  sua toca é de <span class="position-until-end"></span>.
+                  Considere a velocidade da raposa como sendo
                   <span class="fox-velocity-desktop"></span>m/s e o tempo de
                   encontro dela com o tatu é de
                   <span class="crash-time-desktop"></span>.
@@ -273,10 +272,9 @@
                 <br />
                 <p class="texte-center text-black">
                   <strong>Dados</strong>: A distância entre eles é de
-                  <span class="dist-between-mobile"></span>. A distância entre o
-                  tatu e sua toca é de
-                  <span class="position-until-end-mobile"></span>. Considere a
-                  velocidade da raposa como sendo
+                  <span class="dist-between"></span>. A distância entre o tatu e
+                  sua toca é de <span class="position-until-end"></span>.
+                  Considere a velocidade da raposa como sendo
                   <span class="fox-velocity-mobile"></span>m/s e o tempo de
                   encontro dela com o tatu é de
                   <span class="crash-time-mobile"></span>.
@@ -324,9 +322,7 @@
                 <h5 class="modal-title" id="modalLabel">Fim do desafio</h5>
               </div>
               <div class="modal-body">
-                <p class="textWin">
-                  Parabéns por completar o desafio! Siga para a próxima fase
-                </p>
+                <p class="textWin">Este desafio acabou! Siga para o próximo</p>
               </div>
               <div class="modal-footer">
                 <button
@@ -341,7 +337,7 @@
                   class="btn btn-primary d-none"
                   role="button"
                 >
-                  Próxima fase
+                  Próximo desafio
                 </a>
               </div>
             </div>
@@ -365,9 +361,7 @@
                 <h5 class="modal-title" id="modalLabel">Fim da fase</h5>
               </div>
               <div class="modal-body">
-                <p class="textWin">
-                  Parabéns por completar o desafio! Siga para o próximo
-                </p>
+                <p class="textWin">Este desafio acabou! Siga para o próximo</p>
               </div>
               <div class="modal-footer">
                 <button
@@ -467,7 +461,7 @@
               </div>
               <div class="modal-footer">
                 <a
-                  href="./phase_main_02.html"
+                  href="./phase_05.html"
                   role="button"
                   class="btn btn-secondary btn-sm"
                 >
@@ -501,7 +495,7 @@
               </div>
               <div class="modal-footer">
                 <a
-                  href="./phase_main_02.html"
+                  href="./phase_05.html"
                   role="button"
                   class="btn btn-secondary"
                 >
@@ -614,7 +608,7 @@
 
               <div class="modal-footer">
                 <a
-                  href="./phase_main_02.html"
+                  href="./phase_05.html"
                   class="btn btn-primary btn-sm d-lg-none"
                   role="button"
                 >
@@ -651,7 +645,7 @@
 
               <div class="modal-footer">
                 <a
-                  href="./phase_main_02.html"
+                  href="./phase_05.html"
                   class="btn btn-primary d-sm-none d-lg-inline"
                   role="button"
                 >
@@ -662,6 +656,23 @@
           </div>
         </div>
       </main>
+
+      <footer
+        style="width: 1200px"
+        class="d-flex justify-content-between text-white"
+      >
+        <span></span>
+
+        <span
+          class="border-top border-white border-5 text-center dist-between"
+          style="width: 129px"
+        >
+        </span>
+
+        <span
+          class="border-top border-white border-5 position-until-end"
+        ></span>
+      </footer>
     </section>
 
     <script type="module" src="../src/js/phase_04.js"></script>
