alterações na fase quatro

--- a/pages/phase_04.html
+++ b/pages/phase_04.html
@@ -80,7 +80,6 @@
             class="btn btn-info btn-sm d-lg-none"
             data-bs-toggle="modal"
             data-bs-target="#question-mobile"
-            disabled
           >
             Mostrar pergunta
           </button>
@@ -91,7 +90,6 @@
             class="btn btn-info d-none d-lg-inline"
             data-bs-toggle="modal"
             data-bs-target="#question-desktop"
-            disabled
           >
             Mostrar pergunta
           </button>
@@ -657,10 +655,7 @@
         </div>
       </main>
 
-      <footer
-        style="width: 1200px"
-        class="d-flex justify-content-between text-white"
-      >
+      <div id="footer" class="dist d-none justify-content-between text-white">
         <span></span>
 
         <span
@@ -672,7 +667,7 @@
         <span
           class="border-top border-white border-5 position-until-end"
         ></span>
-      </footer>
+      </div>
     </section>
 
     <script type="module" src="../src/js/phase_04.js"></script>
