correção de bugs

--- a/pages/phase_04.html
+++ b/pages/phase_04.html
@@ -655,17 +655,21 @@
         </div>
       </main>
 
-      <div id="footer" class="dist d-none justify-content-between text-white">
+      <div
+        id="footer"
+        class="dist d-none justify-content-end align-items-center text-white"
+      >
         <span></span>
 
         <span
-          class="border-top border-white border-5 text-center dist-between"
-          style="width: 129px"
+          id="different-pos"
+          class="d-inline-block border-top border-white border-5 text-center dist-between"
         >
         </span>
 
         <span
-          class="border-top border-white border-5 position-until-end"
+          id="end-position"
+          class="d-inline-block border-top border-white border-5 position-until-end text-center"
         ></span>
       </div>
     </section>
