--- a/pages/phase_07.html
+++ b/pages/phase_07.html
@@ -124,7 +124,7 @@
 
         <div class="object position-absolute d-none">
           <div class="armadillo">
-            <p class="text-center mb-0 fw-bold">t = 3s <br />v = 7m/</p>
+            <p class="text-center mb-0 fw-bold">t = 3s <br />v = 7m/s</p>
           </div>
         </div>
 
