coreção na pergunta

--- a/pages/phase_04.html
+++ b/pages/phase_04.html
@@ -77,7 +77,7 @@
             <div class="modal-header">
               <h5 class="modal-title">
                 A velocidade
-                <strong>mínima nescessária</strong> do tatu para que ele fuja
+                <strong>mínima necessária</strong> do tatu para que ele fuja
                 do predador é de, aproximadamente:
                 <br />
               </h5>
@@ -139,7 +139,7 @@
             <div class="modal-header">
               <h5 class="modal-title">
                 A velocidade mínima
-                <strong>nescessária</strong> do tatu para que ele fuja do
+                <strong>necessária</strong> do tatu para que ele fuja do
                 predador é de, aproximadamente:
                 <br />
               </h5>
@@ -172,7 +172,7 @@
                 <strong>Dados</strong>: A distância entre eles é de
                 <span class="dist-between"></span>. A distância entre o tatu e
                 sua toca é de <span class="position-until-end"></span>.
-                Considere a velocidade da raposa como sendo
+                Considere a raposa com velocidade constante igual a
                 <span class="fox-velocity-mobile"></span>m/s e o tempo de
                 encontro dela com o tatu é de
                 <span class="crash-time-mobile"></span>.
