add balloon text fox

--- a/pages/phase_04.html
+++ b/pages/phase_04.html
@@ -60,6 +60,39 @@
           Mostrar pergunta
         </button>
       </div>
+      <!-- Pergunatas no balão -->
+      <div class="fox-balloon-desktop">
+        <p>
+          Se eu manter uma velocidade constante de <span class="fox-velocity-desktop"></span>m/s, eu alcanço Tito em
+          <span class="crash-time-desktop"></span>.
+        </p>
+      </div>
+      <!-- <div class="amadillo-balloon-desktop">
+        <p>
+          Que velocidade minama eu devo manter para chegar a salvo em minha toca:
+        </p>
+        <div class="d-flex justify-content-center align-items-center gap-3">
+          <div class="form-check">
+            <input role="button" type="radio" name="velocity" class="form-check-input" id="radio5" />
+            <label class="text-black" for="radio5"></label>
+          </div>
+
+          <div class="form-check">
+            <input role="button" type="radio" name="velocity" class="form-check-input" id="radio6" />
+            <label class="text-black" for="radio6"></label>
+          </div>
+
+          <div class="form-check">
+            <input role="button" type="radio" name="velocity" class="form-check-input" id="radio7" />
+            <label class="text-black" for="radio7"></label>
+          </div>
+
+          <div class="form-check">
+            <input role="button" type="radio" name="velocity" class="form-check-input" id="radio8" />
+            <label class="text-black" for="radio8"></label>
+          </div>
+        </div>
+      </div> -->
 
       <!-- MRU -->
       <div data-armadillo class="object position-absolute">
