correção dos modal

--- a/pages/phase_04.html
+++ b/pages/phase_04.html
@@ -358,13 +358,12 @@
       </div>
 
       <!-- Modal para informar uma nova tentativa (mobile)-->
-      <div id="game-over-modal-mobile" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="modalLabel"
+      <div id="game-over-modal-mobile" class="modal fade" data-bs-backdrop="static" tabindex="-1" role="dialog" aria-labelledby="modalLabel"
         aria-hidden="true">
         <div class="modal-dialog modal-sm" role="document">
           <div class="modal-content">
             <div class="modal-header">
               <h5 class="modal-title">Resposta errada</h5>
-              <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Fechar"></button>
             </div>
             <div class="modal-body">
               <p class="textWin">Não foi dessa vez! Tente Novamente.</p>
@@ -380,13 +379,12 @@
       </div>
 
       <!-- Modal para informar uma nova tentativa (desktop) -->
-      <div id="game-over-modal-desktop" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="modalLabel"
+      <div id="game-over-modal-desktop" class="modal fade" data-bs-backdrop="static" tabindex="-1" role="dialog" aria-labelledby="modalLabel"
         aria-hidden="true">
         <div class="modal-dialog" role="document">
           <div class="modal-content">
             <div class="modal-header">
               <h5 class="modal-title" id="modalLabel">Resposta errada</h5>
-              <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Fechar"></button>
             </div>
 
             <div class="modal-body">
