add balloon fox animation

--- a/pages/phase_04.html
+++ b/pages/phase_04.html
@@ -61,7 +61,7 @@
         </button>
       </div>
       <!-- Pergunatas no balão -->
-      <div class="fox-balloon-desktop">
+      <div class="fox-balloon-desktop d-none">
         <p>
           Se eu manter uma velocidade constante de <span class="fox-velocity-desktop"></span>m/s, eu alcanço Tito em
           <span class="crash-time-desktop"></span>.
